manifests/django-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: django-api
  labels:
    app.kubernetes.io/managed-by: argocd
    kubernetes.io/metadata.name: django-api
