manifests/django-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-api
  namespace: django-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: qoves.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-api
                port:
                  number: 80
